Closed
Bug 867439
Opened 12 years ago
Closed 12 years ago
js/src/vm/ArgumentObject.cpp fails to build on non-ION platforms
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: stevensn, Unassigned)
References
Details
Attachments
(1 file)
743 bytes,
patch
|
nbp
:
review+
|
Details | Diff | Splinter Review |
When building m-c on a non ION platform (ppc) I get:
...firefox/mozilla-central-hg/src/js/src/vm/ArgumentsObject.cpp
In file included from /media/nfs/usb_drive_src/firefox/mozilla-central-hg/src/js/src/vm/ArgumentsObject.cpp:21:
/media/nfs/usb_drive_src/firefox/mozilla-central-hg/src/js/src/ion/IonFrames.h:290:3: error: #error "unsupported architecture"
I think this was introduced with bug 860145
Reporter | ||
Comment 1•12 years ago
|
||
Attachment #743930 -
Flags: review?(nicolas.b.pierron)
Comment 2•12 years ago
|
||
Comment on attachment 743930 [details] [diff] [review]
patch that only includes IonFrames when JS_ION is defined
Review of attachment 743930 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for the patch and sorry for the trouble.
Do you have commit access?
Attachment #743930 -
Flags: review?(nicolas.b.pierron) → review+
Reporter | ||
Comment 3•12 years ago
|
||
No I don't have commit access. Would you be kind enough to push this for me?
Comment 4•12 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/4ff1e574e509
FYI, the checkin-needed bug keyword is what you're looking for next time :)
Comment 5•12 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•