Bug 867439 - Only include IonFrames.h when building with ION. r=nbp